--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
     </div>
     <div class="mobile-header d-lg-none">
         <div class="mobile-banner">
-            Giảm giá 20% cho đơn hàng đầu tiên 🎉
+            Thổi hồn vào âm nhạc của bạn 🎉
         </div>
         <div class="mobile-main-header">
             <div class="d-flex justify-content-between align-items-center">
@@ -505,7 +505,6 @@
                 </a>
             </div>
 
-            <!-- Box 3 -->
             <div class="col-md-3 mb-4">
                 <a href="#" class="custom-box h-100 text-decoration-none">
                     <div class="me-3 fs-1">
@@ -518,7 +517,6 @@
                 </a>
             </div>
 
-            <!-- Box 4 -->
             <div class="col-md-3 mb-4">
                 <a href="#" class="custom-box h-100 text-decoration-none">
                     <div class="me-3 fs-1">
@@ -698,7 +696,7 @@
 
 <script>
     const adjustDesktopPadding = () => {
-        if (window.innerWidth >= 992) {  // chỉ áp dụng cho desktop
+        if (window.innerWidth >= 992) {  
             const header = document.querySelector('.fixed-top');
             const main = document.querySelector('main');
             if (header && main) {
@@ -710,7 +708,7 @@
 
     // Hàm điều chỉnh padding cho mobile
     const adjustMobilePadding = () => {
-        if (window.innerWidth < 992) {  // chỉ áp dụng cho mobile
+        if (window.innerWidth < 992) {  
             const mobileHeader = document.querySelector('.mobile-header');
             const main = document.querySelector('main');
             if (mobileHeader && main) {
@@ -721,15 +719,12 @@
         }
     };
 
-    // Hàm chung để điều chỉnh padding dựa trên kích thước màn hình
     const adjustLayoutPadding = () => {
         const main = document.querySelector('main');
-        // Reset padding trước khi áp dụng
         if (main) {
             main.style.paddingTop = '0';
         }
 
-        // Áp dụng padding tương ứng với layout
         if (window.innerWidth >= 992) {
             adjustDesktopPadding();
         } else {
@@ -737,7 +732,6 @@
         }
     };
 
-    // Xử lý menu mobile
     const initMobileMenu = () => {
         const menuToggle = document.getElementById('menuToggle');
         const sideMenu = document.getElementById('sideMenu');
@@ -758,12 +752,10 @@
         }
     };
 
-    // Event listeners
     window.addEventListener('load', () => {
         adjustLayoutPadding();
         initMobileMenu();
 
-        // Xử lý khi ảnh header load xong
         const headerImages = document.querySelectorAll('header img');
         headerImages.forEach(img => {
             img.addEventListener('load', adjustLayoutPadding);
