--- a/pages/cart/cart.html
+++ b/pages/cart/cart.html
@@ -201,7 +201,7 @@
 
 <div class="container my-5">
     <div class="row">
-        <div class="col-12 col-md-8 mt-4">
+        <div class=" col-md-8 col-sm-12 mt-4">
             <h5 class="">BẠN CÓ CẦN THÊM?</h5>
             <div class="divider mt-3 mb-3"></div>
 
@@ -219,8 +219,8 @@
                 </button>
             </div>
 
-            <div class="cart-container">
-                <h5 class="p-3">GIỎ HÀNG</h5>
+            <div class="my-5 col-12">
+                <h5 class="p-3" style="font-weight: bold;background-color: #F1F1F1">GIỎ HÀNG</h5>
                 <div class="product">
                     <div class="product-information">
                         <div class="product-detail">
@@ -340,7 +340,9 @@
                     <p>TẠM TÍNH</p>
                     <p id="total-price" style="text-align: right;font-size: 20px">19.980.000 VND</p>
                 </div>
-                <button class="payment-button">TIẾP TỤC THANH TOÁN</button>
+                <a href="checkout.html">
+                    <button type="submit" class="payment-button">TIẾP TỤC THANH TOÁN</button>
+                </a>
 
             </div>
         </div>
