--- a/pages/account/register.html
+++ b/pages/account/register.html
@@ -8,9 +8,415 @@
 
     <link rel="icon" href="/assets/images/logo.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+<!--    <link rel="stylesheet" href="/assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.min.css">-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/custom.css">
-    <link rel="stylesheet" href="/assets/css/login.css">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
+        body {
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+        }
+        p {
+            text-weight: normal;
+            margin-bottom: 20px;
+        }
+        .login-container {
+            margin: 0 auto;
+            align-content: center;
+            width: 800px;
+            background-color: #fff;
+            padding: 30px;
+            text-align: center;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .login-container h3 {
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+        .social-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 50px;
+            margin-bottom: 20px;
+        }
+        .btn-social {
+            border: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            background-color: white;
+        }
+        .divider {
+            display: flex;
+            align-items: center;
+            text-align: center;
+            margin: 20px 0;
+            color: black;
+        }
+        .divider::before, .divider::after {
+            content: '';
+            flex: 1;
+            border-bottom: 1px solid #ccc;
+        }
+        .divider:not(:empty)::before {
+            margin-right: 10px;
+        }
+        .divider:not(:empty)::after {
+            margin-left: 10px;
+        }
+
+        .field {
+            position: relative;
+        }
+
+        .field input {
+            width: 100%;
+            padding: 0.5rem;
+            margin-bottom: 30px;
+            border: none;
+            border-bottom: 1px solid #ccc;
+            outline: none;
+            color: #fd0;
+            background: none;
+        }
+
+        .field label {
+            position: absolute;
+            font-size: 14px;
+            top: 0;
+            left: 0;
+            translate: 0.625rem 0.625rem;
+            color: #fd0;
+            padding-inline-start: 0.25rem;
+            pointer-events: none;
+            transition: translate 250ms;
+            visibility: hidden;
+        }
+
+        .field:focus-within label,
+        .field:not(:has(:placeholder-shown))
+        label {
+            translate: 0.5rem -1rem;
+            visibility: visible;
+        }
+        .field::placeholder {
+            color: transparent;
+        }
+
+        .field input:focus {
+            border-bottom: 1px solid #fd0;
+        }
+        .field input:focus::placeholder {
+            color: transparent;
+        }
+
+        .error-message {
+            text-align: left;
+            margin-top: -20px;
+            margin-bottom: 20px;
+            color: red;
+            font-size: 10px;
+        }
+
+        .btn-login {
+            background-color: #fd0;
+            color: black;
+            padding: 10px;
+            width: 100%;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 1rem;
+        }
+        .btn-login:hover {
+            background-color: #fd0;
+        }
+        .text-link {
+            color: #fd0;
+            text-decoration: none;
+        }
+        .text-link:hover {
+            text-decoration: underline;
+        }
+        .footer-links {
+            margin-top: 20px;
+        }
+        .forgot-password {
+            text-decoration: none;
+            color: black;
+            font-size: 13px;
+            font-style: italic;
+        }
+
+        /*index page style by Nguyen Phy Long*/
+
+        .dropdown-menu a {
+            cursor: pointer;
+        }
+
+        .navbar-nav .nav-link {
+            position: relative;
+            padding: 0.5rem 1rem;
+            margin: 0 0.2rem;
+            transition: all 0.3s ease;
+            color: black;
+        }
+
+        .navbar-nav .nav-link::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background-color: var(--hover-color);
+            transition: width 0.3s ease;
+        }
+
+        .navbar-nav .nav-link:hover::after {
+            width: 100%;
+        }
+
+        .navbar-nav .nav-link:hover {
+            color: whitesmoke;
+        }
+
+        .custom-box {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            text-decoration: none;
+            background: linear-gradient(145deg, var(--bs-primary), #f1dc4f);
+            border-radius: 8px;
+            border: none;
+            padding: 15px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .custom-box:hover {
+            transform: translateY(-5px) scale(1.02);
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.15);
+        }
+
+
+        .card {
+            border: none;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
+            transition: all 0.3s ease;
+        }
+
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+        }
+
+        .card-title {
+            font-weight: 600;
+            margin-bottom: 1rem;
+        }
+
+        .card-body {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 100%;
+        }
+
+        .card-body .btn {
+            margin-top: auto;
+        }
+
+        @media (max-width: 991.98px) {
+
+            :root {
+                --header-height: 60px;
+                --bottom-nav-height: 60px;
+                --primary-color: #0d6efd;
+                --secondary-color: #f8f9fa;
+            }
+
+            /* Mobile Header */
+            .mobile-header {
+                position: fixed;
+                top: 0;
+                left: 0;
+                right: 0;
+                z-index: 1030;
+                background: #fff;
+            }
+
+            .mobile-banner {
+                background: linear-gradient(90deg, var(--primary-color), #ffea6f);
+                padding: 6px;
+                text-align: center;
+                font-size: 0.85rem;
+                font-weight: 500;
+                color: #fff;
+            }
+
+            .mobile-main-header {
+                padding: 10px 15px;
+                background: #fff;
+                box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+            }
+
+            /* Improved Search Bar */
+            .mobile-search {
+                position: relative;
+                margin: 12px 0 8px;
+            }
+
+            .mobile-search input {
+                width: 100%;
+                padding: 12px 45px 12px 20px;
+                border: none;
+                border-radius: 25px;
+                background: var(--secondary-color);
+                font-size: 0.95rem;
+            }
+
+            .mobile-search button {
+                position: absolute;
+                right: 15px;
+                top: 50%;
+                transform: translateY(-50%);
+                border: none;
+                background: none;
+                color: #666;
+            }
+
+            /* Side Menu Improvements */
+            .mobile-side-menu {
+                position: fixed;
+                top: 0;
+                left: -300px;
+                width: 300px;
+                height: 100vh;
+                background: #fff;
+                z-index: 1040;
+                transition: 0.3s ease-out;
+                overflow-y: auto;
+            }
+
+            .mobile-side-menu.active {
+                left: 0;
+                box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+            }
+
+            .menu-header {
+                padding: 20px;
+                background: var(--secondary-color);
+                border-bottom: 1px solid #eee;
+            }
+
+            .menu-items {
+                padding: 15px 0;
+            }
+
+            .menu-item {
+                display: flex;
+                align-items: center;
+                padding: 12px 20px;
+                color: #333;
+                text-decoration: none;
+                transition: 0.2s;
+            }
+
+            .menu-item:hover {
+                background: var(--secondary-color);
+            }
+
+            .menu-item i {
+                margin-right: 15px;
+                font-size: 1.2rem;
+                color: var(--primary-color);
+            }
+
+            /* Bottom Navigation */
+            .mobile-bottom-nav {
+                position: fixed;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                background: #fff;
+                box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.05);
+                z-index: 1030;
+                padding: 8px 0 5px;
+            }
+
+            .mobile-nav-items {
+                display: flex;
+                justify-content: space-around;
+            }
+
+            .mobile-nav-item {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                color: #666;
+                text-decoration: none;
+                font-size: 0.8rem;
+                padding: 5px;
+            }
+
+            .mobile-nav-item i {
+                font-size: 1.4rem;
+                margin-bottom: 4px;
+            }
+
+            .mobile-nav-item.active {
+                color: var(--primary-color);
+            }
+
+            /* Overlay */
+            .menu-overlay {
+                position: fixed;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                background: rgba(0, 0, 0, 0.5);
+                z-index: 1035;
+                opacity: 0;
+                visibility: hidden;
+                transition: 0.3s;
+            }
+
+            .menu-overlay.active {
+                opacity: 1;
+                visibility: visible;
+            }
+
+            /* Main Content Adjustment */
+            main {
+                padding-top: calc(var(--header-height) + 10px);
+                padding-bottom: calc(var(--bottom-nav-height) + 10px);
+            }
+
+            /* Cart Badge */
+            .cart-badge {
+                position: absolute;
+                top: -5px;
+                right: -8px;
+                background: #dc3545;
+                color: white;
+                border-radius: 50%;
+                padding: 3px 6px;
+                font-size: 0.7rem;
+            }
+
+        }
+
+    </style>
 </head>
 
 <body>
@@ -209,8 +615,8 @@
                         &nbsp;Google
                     </button>
                     <button class="btn-social">
-                        <img src="/assets/images/logo/zalo-logo.png" alt="Zalo" style="width: 20px; height: 20px;">
-                        &nbsp;Zalo
+                        <img src="/assets/images/logo/Facebook.png" alt="Facebook" style="width: 20px; height: 20px;">
+                        &nbsp;Facebook
                     </button>
                 </div>
                 <div class="divider">hoặc</div>
