--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             rel="stylesheet">
     <link rel="icon" href="/assets/images/logo.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/custom.css">
+    <link rel="stylesheet" href="assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/custom.css">
 
     <style>
         .dropdown-menu a {
@@ -303,11 +303,11 @@
                     </form>
                     <!-- Navigation links -->
                     <div class="navbar-nav mx-auto fw-bold">
-                        <a class="nav-link" href="/pages/home.html">TRANG CHỦ</a>
-                        <a class="nav-link" href="/pages/about.html">GIỚI THIỆU</a>
-                        <a class="nav-link" href="/pages/about.html">SẢN PHẨM</a>
-                        <a class="nav-link" href="/pages/posts/posts.html">TIN TỨC</a>
-                        <a class="nav-link" href="/pages/contact.html">LIÊN HỆ</a>
+                        <a class="nav-link" href="pages/home.html">TRANG CHỦ</a>
+                        <a class="nav-link" href="pages/about.html">GIỚI THIỆU</a>
+                        <a class="nav-link" href="pages/about.html">SẢN PHẨM</a>
+                        <a class="nav-link" href="pages/posts/posts.html">TIN TỨC</a>
+                        <a class="nav-link" href="pages/contact.html">LIÊN HỆ</a>
                     </div>
                     <!-- Action buttons for mobile -->
                     <div class="action-buttons d-lg-none">
