--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giới thiệu | Drum Store</title>
+    <title>Giới thiệu - Drum Store</title>
     <link rel="icon" href="../assets/images/logo.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="../assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.min.css">
